--- a/ChessClasses.vcxproj
+++ b/ChessClasses.vcxproj
@@ -145,7 +145,9 @@
     <ClCompile Include="ChessClasses\Moves\EnPassant.cpp" />
     <ClCompile Include="ChessClasses\Moves\Promotion.cpp" />
     <ClCompile Include="ChessClasses\Moves\Regular.cpp" />
+    <ClCompile Include="ChessClasses\Pieces\Bishop.cpp" />
     <ClCompile Include="ChessClasses\Pieces\ChessPiece.cpp" />
+    <ClCompile Include="ChessClasses\Pieces\King.cpp" />
     <ClCompile Include="ChessClasses\utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
