--- a/ChessClasses.vcxproj.filters
+++ b/ChessClasses.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClCompile Include="ChessClasses\Pieces\Pawn.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ChessClasses\Moves\ChessMove.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ChessClasses\ChessBoard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ChessClasses\Moves\Capture.h">
