--- a/ChessClasses.vcxproj.filters
+++ b/ChessClasses.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClInclude Include="src\utilities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
