debug and release work after changes in premake

--- a/ChessClasses.vcxproj
+++ b/ChessClasses.vcxproj
@@ -68,6 +68,9 @@
       <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>vendor\SFML-2.6.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>IF EXIST "vendor\SFML-2.6.1\bin\*.dll"\ (xcopy /Q /E /Y /I "vendor\SFML-2.6.1\bin\*.dll" "bin\Debug" &gt; nul) ELSE (xcopy /Q /Y /I "vendor\SFML-2.6.1\bin\*.dll" "bin\Debug" &gt; nul)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -88,6 +91,9 @@
       <AdditionalDependencies>sfml-graphics.lib;sfml-window.lib;sfml-system.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>vendor\SFML-2.6.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>IF EXIST "vendor\SFML-2.6.1\bin\*.dll"\ (xcopy /Q /E /Y /I "vendor\SFML-2.6.1\bin\*.dll" "bin\Release" &gt; nul) ELSE (xcopy /Q /Y /I "vendor\SFML-2.6.1\bin\*.dll" "bin\Release" &gt; nul)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\ChessBoard.h" />
