--- a/ChessClasses.vcxproj.filters
+++ b/ChessClasses.vcxproj.filters
@@ -95,4 +95,19 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\utilities.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="src\img\ChessPiecesArray.png" />
+    <Image Include="src\img\Bishop_Black.png" />
+    <Image Include="src\img\Bishow_White.png" />
+    <Image Include="src\img\King_Black.png" />
+    <Image Include="src\img\King_White.png" />
+    <Image Include="src\img\Knight_Black.png" />
+    <Image Include="src\img\Knight_White.png" />
+    <Image Include="src\img\Pawn_Black.png" />
+    <Image Include="src\img\Pawn_White.png" />
+    <Image Include="src\img\Queen_Black.png" />
+    <Image Include="src\img\Queen_White.png" />
+    <Image Include="src\img\Rook_Black.png" />
+    <Image Include="src\img\Rook_White.png" />
+  </ItemGroup>
 </Project>
