--- a/ChessClasses.vcxproj
+++ b/ChessClasses.vcxproj
@@ -151,6 +151,9 @@
     <Image Include="src\img\R_black.png" />
     <Image Include="src\img\R_white.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="src\fonts\LEMONMILK-Regular.otf" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
