--- a/ChessClasses.vcxproj.filters
+++ b/ChessClasses.vcxproj.filters
@@ -110,4 +110,7 @@
     <Image Include="src\img\R_black.png" />
     <Image Include="src\img\R_white.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="src\fonts\LEMONMILK-Regular.otf" />
+  </ItemGroup>
 </Project>
