--- a/ChessClasses.vcxproj
+++ b/ChessClasses.vcxproj
@@ -98,6 +98,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Cards\Card.h" />
     <ClInclude Include="src\ChessBoard.h" />
     <ClInclude Include="src\ChessGame.h" />
     <ClInclude Include="src\Exception.h" />
